# serializer version: 1
# name: test_random_size1
  dict({
    '@': 100.0,
  })
# ---
# name: test_random_size2
  dict({
    'A_': 100.0,
  })
# ---
# name: test_random_size3
  dict({
    'BW': 99.69427209783292,
    'Bw': 0.3057279021670713,
  })
# ---
# name: test_random_size4
  dict({
    'CF': 60.369053326940495,
    'CN': 1.278568003835704,
    'CR': 38.27712961483139,
    'C^': 0.009322891694635342,
    'Cr': 0.06526024186244739,
    'C~': 0.0006659208353310958,
  })
# ---
# name: test_random_size5
  dict({
    'D?{': 43.05637404642059,
    'D@s': 42.929204380537364,
    'D@{': 1.6415429662005967,
    'DBw': 0.24198151424972214,
    'DB{': 0.03672588893257034,
    'DDW': 10.88183068708693,
    'DD[': 0.8912303520356029,
    'DFw': 0.0004634181568778592,
    'DF{': 7.72363594796432e-05,
    'DJk': 0.007376072330305926,
    'DJ{': 0.0032439270981450144,
    'DN{': 0.0001158545392194648,
    'DR{': 0.0002703272581787512,
    'D`[': 0.2851180210191029,
    'D`{': 0.004402472490339662,
    'Dd[': 0.0043252361308600195,
    'DqK': 0.015678980974367568,
    'Dr[': 3.86181797398216e-05,
  })
# ---
